--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Reparaciones Ivan</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="icon" type="image/png" href="assets/favicon/favicon.ico">
+  <link rel="icon" type="image/png" href="assets/favicon/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- FontAwesome -->
+  <link rel="preconnect" href="https://kit.fontawesome.com" crossorigin />
+  <link rel="dns-prefetch" href="https://kit.fontawesome.com" />
 </head>
+
 <body>
   <app-root></app-root>
   <script src="https://kit.fontawesome.com/cb0353dbc0.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
