--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <app-root></app-root>
-  <script src="https://kit.fontawesome.com/cb0353dbc0.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/cb0353dbc0.js" crossorigin="anonymous" defer></script>
 </body>
 
 </html>
