update json scripts and preview

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,21 @@
   <!-- FontAwesome -->
   <link rel="preconnect" href="https://kit.fontawesome.com" crossorigin />
   <link rel="dns-prefetch" href="https://kit.fontawesome.com" />
+  <!-- Meta tags para preview -->
+  <meta property="og:title" content="Reparaciones Iván - Soluciones rápidas y confiables para tu PC" />
+  <meta property="og:description"
+    content="Servicio técnico de computadoras. Limpieza, formateo, instalación de programas y más." />
+  <meta property="og:image" content="https://reparacionesivan.com/assets/img/preview.avif" />
+  <meta property="og:url" content="https://reparacionesivan.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="es_AR" />
+
+  <!-- Twitter card (opcional, pero suma) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Reparaciones Iván" />
+  <meta name="twitter:description" content="Soluciones rápidas y confiables para tu PC" />
+  <meta name="twitter:image" content="https://reparacionesivan.com/assets/images/og-img.jpg" />
+
 </head>
 
 <body>
